--- a/Pages/AppModify.cshtml
+++ b/Pages/AppModify.cshtml
@@ -77,7 +77,7 @@
                 <input type="time" name="dNewTime" asp-for=@Model.appointment.BOOKED_TIME />
             </div>
             <div class="col-md-2">
-                <input type="text" class="w-50" name="iDuration" asp-for=@Model.appointment.Duration/>
+                <input type="text" class="w-50" name="duration" asp-for=@Model.appointment.Duration/>
             </div>
         </div>
 
