refactoring, reserved appts

--- a/Pages/AdHocClinicList.cshtml
+++ b/Pages/AdHocClinicList.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <h1>Clinics for @Model.clinician</h1>
+    <h1>Clinics for @Model.clinician.NAME</h1>
 
     <table class="table">
         <thead>
