--- a/Pages/AddToWL.cshtml
+++ b/Pages/AddToWL.cshtml
@@ -57,8 +57,12 @@
                 <div class="col-md-2">
                     <p>@Model.Patient.CGU_No</p>
                 </div>
+                <div class="col-md-2" hidden="true">
+                    <input name="mpi" value=@Model.Patient.MPI />
+                </div>
             </div>
         }
+        
 
         <div class="row mb-5 g-5">
             <div class="col-md-4"></div>
