--- a/Pages/ClinicPatternList.cshtml
+++ b/Pages/ClinicPatternList.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <h1>Clinic patterns for @Model.clinician</h1>
+    <h1>Clinic patterns for @Model.clinician.NAME</h1>
 
     <table class="table">
         <thead>
@@ -49,6 +49,22 @@
         </tbody>
     </table>
 
+    <div class="row">
+        <div action="col-md-2">
+            <button type="button" id="btnCancel" class="btn btn-success">Cancel</button>
+        </div>
+    </div>
 
 </div>
+
+<script>
+
+    document.getElementById("btnCancel").addEventListener("click", GoBack);
+
+    function GoBack() 
+    {
+        window.close();
+    }
+
+</script>
 
