--- a/Pages/ClinicPatternModify.cshtml
+++ b/Pages/ClinicPatternModify.cshtml
@@ -5,8 +5,192 @@
 
 <div class="container">
     <h1>Clinic Pattern for @Model.clinician.NAME, @Model.venue.NAME</h1>
-    <form method="post">
+    <form id="frmModifyStandardPattern" method="post">
+        <div class="row mb-5 g-5">
+            <div class="col-md-2">
+                <label><strong>Clinician:</strong></label>
+            </div>
+            <div class="col-md-3">
+                <select name="clinicianID" id="ddlClinician">
+                    <option selected value="">Select...</option>
+                    @foreach (var item in Model.staffMemberList)
+                    {
+                        <option value=@item.STAFF_CODE>@item.NAME</option>
+                    }
+                </select>
+            </div>
+            <div class="col-md-2">
+                <label><strong>Clinic:</strong></label>
+            </div>
+            <div class="col-md-3">
+                <select name="clinicID" id="ddlClinic">
+                    <option selected value="">Select...</option>
+                    @foreach (var item in Model.clinicVenueList)
+                    {
+                        <option value=@item.FACILITY>@item.NAME</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="row mb-5 g-5">
+            <div class="col-md-3">
+                <label><strong>Start Date:</strong> (leave blank for today)</label>
+            </div>
+            <div class="col-md-3">
+                <input type="date" name="dStartDate" asp-for=@Model.pattern.startDate />
+            </div>
+            <div class="col-md-3">
+                <label><strong>End Date:</strong> (leave blank for none)</label>
+            </div>
+            <div class="col-md-3">
+                <input type="date" name="dEndDate" asp-for=@Model.pattern.endDate />
+            </div>
+        </div>
+        <div class="row mb-5 g-5">
+            <div class="col md-2">
+                <strong>Start time and duration:</strong>
+            </div>
+            <div class="col-md-1">
+                <label>Hour:</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="startHr" asp-for=@Model.pattern.StartHr />
+            </div>
+            <div class="col-md-1">
+                <label>Minute:</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="startMin" asp-for=@Model.pattern.StartMin />
+            </div>
+            <div class="col-md-1">
+                <label>Duration:</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="duration" asp-for=@Model.pattern.Duration />
+            </div>
+            <div class="col md-1">
+                <label>Slots:</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="numSlots" asp-for=@Model.pattern.NumSlots />
+            </div>
+            <div class="col md-2"></div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-2">
+                <strong>Frequency:</strong>
+            </div>
+            <div class="col-md-2">
+                <label>Day: (Monday = 1 etc)</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="dayNum" asp-for=@Model.pattern.DyOfWk />
+            </div>
+            <div class="col-md-1">
+                <label>Week:</label>
+            </div>
+            <div class="col-md-1">
+                <input type="text" class="w-50" name="weekNum" asp-for=@Model.pattern.WkOfMth />
+            </div>
+            <div class="col-md-5">                
+                <div class="row">
+                    Months used in schedule (leave blank to use all)
+                </div>
+                <div class="row">
+                    <div class="col-1">Jan:</div><div class="col-1"><input type="checkbox" id="m1" /></div>
+                    <div class="col-1">Feb:</div><div class="col-1"><input type="checkbox" id="m2" /></div>
+                    <div class="col-1">Mar:</div><div class="col-1"><input type="checkbox" id="m3" /></div>
+                    <div class="col-1">Apr:</div><div class="col-1"><input type="checkbox" id="m4" /></div>
+                </div>
+                <div class="row">
+                    <div class="col-1">May:</div><div class="col-1"><input type="checkbox" id="m5" /></div>
+                    <div class="col-1">Jun:</div><div class="col-1"><input type="checkbox" id="m6" /></div>
+                    <div class="col-1">Jul:</div><div class="col-1"><input type="checkbox" id="m7" /></div>
+                    <div class="col-1">Aug:</div><div class="col-1"><input type="checkbox" id="m8" /></div>
+                </div>
+                <div class="row">
+                    <div class="col-1">Sep:</div><div class="col-1"><input type="checkbox" id="m9" /></div>
+                    <div class="col-1">Oct:</div><div class="col-1"><input type="checkbox" id="m10" /></div>
+                    <div class="col-1">Nov:</div><div class="col-1"><input type="checkbox" id="m11" /></div>
+                    <div class="col-1">Dec:</div><div class="col-1"><input type="checkbox" id="m12" /></div>
+                </div>
+            </div>
+        </div>
+        <div class="row" hidden="true">
+            <input type="text" id="txtMonthString" name="monthstring" asp-for=@Model.pattern.MthOfYr />
+        </div>
 
+
+        
+        <div class="row">
+            <div class="col-md-2">
+                <button class="btn btn-success" onclick="ConfirmNewStandardPattern()">Confirm</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" id="btnCancel" class="btn btn-success">Cancel</button>
+            </div>
+        </div>
     </form>
 
 </div>
+
+
+<script>
+    document.getElementById("btnCancel").addEventListener("click", GoBack);
+
+    function GoBack() 
+    {
+        window.history.back();
+    }
+
+    function ConfirmNewStandardPattern() 
+    {
+        SetDateString();
+        document.getElementById("frmModifyStandardPattern").submit();
+    }
+
+    function SetDateString() 
+    {
+        var mString = "";
+
+        if (document.getElementById("m1").checked) {
+            mString = mString + "1";
+        }
+        if (document.getElementById("m2").checked) {
+            mString = mString + "2";
+        }
+        if (document.getElementById("m3").checked) {
+            mString = mString + "3";
+        }
+        if (document.getElementById("m4").checked) {
+            mString = mString + "4";
+        }
+        if (document.getElementById("m5").checked) {
+            mString = mString + "5";
+        }
+        if (document.getElementById("m6").checked) {
+            mString = mString + "6";
+        }
+        if (document.getElementById("m7").checked) {
+            mString = mString + "7";
+        }
+        if (document.getElementById("m8").checked) {
+            mString = mString + "8";
+        }
+        if (document.getElementById("m9").checked) {
+            mString = mString + "9";
+        }
+        if (document.getElementById("m10").checked) {
+            mString = mString + "a";
+        }
+        if (document.getElementById("m11").checked) {
+            mString = mString + "b";
+        }
+        if (document.getElementById("m12").checked) {
+            mString = mString + "c";
+        }
+        document.getElementById("txtMonthString").value = mString;
+    }
+
+</script>
